# Pixel-Clock

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/waveshare__esp32_p4_nano/: esp32_p4_nano.c  idf_component.yml
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/include/: digit_font.h  global.h  snake.h
main/ui_resources/: digit_font.c  global.c  snake.c
